--- a/.github/workflows/daily-rtdb-backup.yml
+++ b/.github/workflows/daily-rtdb-backup.yml
@@ -1,37 +1,60 @@
-name: Daily RTDB Backup
+name: Daily Firebase Backups
+
+permissions:
+  contents: write
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 18 * * *'
+    - cron: '0 18 * * *'  # 2 AM Manila / 18:00 UTC
 
 jobs:
   backup:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
         with:
           persist-credentials: true
           fetch-depth: 0
 
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-      - name: Dump RTDB & Commit backup
+      - name: Install deps
+        run: npm ci               # or `npm install` if you don't have a lockfile
+
+      - name: Dump RTDB & commit
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
           PROJECT:        ${{ secrets.FIREBASE_PROJECT_ID }}
         run: |
           DATE=$(date -u +'%Y-%m-%d')
-          mkdir -p backups
+          mkdir -p backups/rtdb
           firebase database:get / \
             --project "$PROJECT" \
             --token "$FIREBASE_TOKEN" \
-            > backups/"$DATE".json
+            > backups/rtdb/"$DATE".json
 
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add backups/"$DATE".json
-          git commit -m "Backup $DATE" || echo "No changes to commit"
-          git push origin HEAD:main
+          git add backups/rtdb/"$DATE".json
+          git commit -m "RTDB backup $DATE" || echo "No RTDB changes"
+
+      - name: Dump Firestore & commit
+        env:
+          FIRESTORE_SA_KEY: ${{ secrets.FIRESTORE_SA_KEY }}
+        run: |
+          node scripts/backup-firestore.js
+
+          DATE=$(date -u +'%Y-%m-%d')
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add backups/firestore/"$DATE"
+          git commit -m "Firestore backup $DATE" || echo "No Firestore changes"
+
+      - name: Push all backups
+        run: git push origin HEAD:main
